# Aashu-Tarminal

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  build.gradle  settings.gradle
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: build.yml  release.yml  tests.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/bootstrap/: bootstrap.sh  setup_env.sh  welcome.txt
app/src/main/assets/tools/: categories.json  tools.json
app/src/main/cpp/: CMakeLists.txt  exec_shim.cpp  glyph_atlas.cpp  native-lib.h  pty_manager.cpp  renderer.cpp  terminal.cpp
app/src/main/java/com/aashutarminal/: AashuApp.kt  MainActivity.kt  SettingsActivity.kt  TerminalActivity.kt
app/src/main/java/com/aashutarminal/utils/: FileUtils.kt  (+2 more)
app/src/main/res/drawable/: ic_launcher.xml  ic_terminal.xml
app/src/main/res/layout/: activity_terminal.xml
app/src/main/res/menu/: terminal_menu.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
docs/: api-reference.md  architecture.md  bootstrap-guide.md  tool-registry.md
fastlane/: Fastfile
fastlane/metadata/: en-US_placeholder.txt
fastlane/screenshots/: README.md
scripts/: build.sh  deploy.sh  generate-icons.sh  test.sh
tools-registry/: README.md  generate_registry.py
tools-registry/tools/: build-tools.json  cloud-tools.json  databases.json  devops.json  editors.json  languages.json  misc.json  networking.json  package-managers.json  security.json
(+13 files in other folders)
